--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="d-flex flex-row align-items-center mb-3 slide-container" :style="width: {@containerWidth}px">
         <i class="control-side fas fa-arrow-left" @click="preview()"></i>
-        <img :src="{@slideNumber}.png" alt="" :style="width: {@slideWidth}px">
+        <img :src="{@slideNumber}.PNG" alt="" :style="width: {@slideWidth}px">
         <i class="control-side fas fa-arrow-right" @click="next()"></i>
     </div>
 
