--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
                 $(window).resize(() => {
                     this.ajustesDimension();
-                })
+                });
+
+
             }
 
             next() {
@@ -47,9 +49,13 @@
 
             preview() {
                 this.slideNumber--
-                if (this.slideNumber < 0) {
-                    this.slideNumber = 0;
+                if (this.slideNumber < 1) {
+                    this.slideNumber = 1;
                 }
+            }
+
+            fullscreen() {
+                document.querySelector(".slide-container").requestFullscreen().then()
             }
         });
     </script>
@@ -76,9 +82,11 @@
 
     <div class="d-flex flex-row align-items-center mb-3 slide-container" :style="width: {@containerWidth}px">
         <i class="control-side fas fa-arrow-left" @click="preview()"></i>
-        <img :src="{@slideNumber}.PNG" alt="" :style="width: {@slideWidth}px">
+        <img :src="slide{@slideNumber}.PNG" alt="" :style="width: {@slideWidth}px">
         <i class="control-side fas fa-arrow-right" @click="next()"></i>
     </div>
+
+    <button @click="fullscreen()">FullScreen</button>
 
 </body>
 
